--- a/src/app/pages/realizar-transaccion/realizar-transaccion.component.html
+++ b/src/app/pages/realizar-transaccion/realizar-transaccion.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
     <h2 class="text-center mb-4 animate__animated animate__fadeInDown">
-        <i class="fas fa-exchange-alt"></i> Realizar Transacción
+        <i class="fas fa-exchange-alt"></i> agregar productos a la deuda
     </h2>
 
     <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show animate__animated animate__shakeX" role="alert">
@@ -64,8 +64,8 @@
             />
         </div>
 
-        <button 
-            type="submit" 
+        <button
+            type="submit"
             class="btn btn-primary btn-lg w-100 animate__animated animate__pulse animate__infinite"
             [disabled]="!transaccionForm.valid">
             <i class="fas fa-paper-plane"></i> Realizar Transacción
