--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Banco App</a>
+    <a class="navbar-brand" href="#">DeudorApp</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -26,7 +26,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/realizar-transaccion" routerLinkActive="active">
-                    <i class="fas fa-exchange-alt"></i> Realizar transacción
+                    <i class="fas fa-exchange-alt"></i> agregar deuda
                 </a>
             </li>
         </ul>
